--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ passlib[bcrypt]>=1.7.4
 # Gestione variabili d'ambiente
 python-dotenv>=0.19.0
 pydantic>=1.8.2
-pydantic-settings>=2.0.0  # Per supporto BaseSettings in Pydantic v2
+# IMPORTANTE: Necessario per il supporto di BaseSettings in Pydantic v2
+# Se si usa Pydantic v2 senza questo pacchetto, il servizio non si avvierà
+pydantic-settings>=2.0.0
 
 # Supporto per Jinja2 templates (dashboard web)
 jinja2>=3.0.1
