LogService updates for ChromaDB integration environment
 Updates:
- Enhanced Python environment with ChromaDB and SentenceTransformers support
- Updated logging database with integration testing
- Environment configuration for ML dependencies

 Dependencies verified:
- ChromaDB v1.3.4 with NumPy 2.0 compatibility
- SentenceTransformers v5.1.2 with huggingface_hub fixes
- All ML libraries working in dedicated venv

Logging service ready for vector store integration.

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # PramaIA LogService runtime environment
 # Copy from .env.example and edit values as needed
 
-PRAMAIALOG_HOST=http://127.0.0.1
+PRAMAIALOG_HOST=0.0.0.0
 PRAMAIALOG_PORT=8081
 
 # Optional alternative single variable used by some scripts
